# MakerPi_GroundControl

./: --full-page  .env.example  .gitignore  ANGEBOT.html  ANGEBOT.md  CLAUDE.md  PLAN.md  README.md  auth.db-shm  auth.db-wal  catalog.db-shm  catalog.db-wal  config.json.example  core.db-shm  core.db-wal  html_to_pdf.js  laufzettel.db-shm  laufzettel.db-wal  md_to_pdf.py  members.db-shm  members.db-wal  migrate_add_3vl_columns.py  migrate_add_guest_columns.py  migrate_add_guest_nfc_uid.py  migrate_add_requires_permission.py  migrate_remove_subcategory_pricing.py  pyproject.toml  recover_core_db.sh  requirements.txt  restore_from_backup.sh
.auth.db-litestream/: generation
.catalog.db-litestream/: generation
.claude/: settings.local.json
.core.db-litestream/: generation
.laufzettel.db-litestream/: generation
.members.db-litestream/: generation
.omc/: project-memory.json
backend/: __init__.py  config.py  db_utils.py  docs_app.py  email_templates.py  email_utils.py  gdrive.py  main.py  member_routes.py  middleware.py
config/: config.json.backup  config.json.example  litestream.yml  litestream.yml.example  mosquitto.conf  nginx.conf  vapid_private.pem  vapid_public.pem  zigbee2mqtt.yaml
docs/: 00-overview.de.md  00-overview.en.md  00-overview.md  01-quickstart.de.md  01-quickstart.en.md  01-quickstart.md  02-web-ui.de.md  02-web-ui.en.md  02-web-ui.md  03-tags-and-laufzettel.de.md  03-tags-and-laufzettel.en.md  03-tags-and-laufzettel.md  04-material-katalog.de.md  04-material-katalog.en.md  04-material-katalog.md  05-system-architecture.de.md  05-system-architecture.en.md  05-system-architecture.md  06-mqtt-data-flow.de.md  06-mqtt-data-flow.en.md  06-mqtt-data-flow.md  07-database-model.de.md  07-database-model.en.md  (+63 more)
(+173 files in other folders)
