[project]
name = "makerpi-groundcontrol"
version = "0.1.0"
description = "Ground Control system for MakerPi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "paho-mqtt==2.1.0",
    "sqlalchemy==2.0.35",
    "markdown==3.7",
    "sqlite-web",
    "sumup>=0.1.3",
    "qrcode[pil]>=7.4.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "itsdangerous>=2.1.2",
    "apscheduler>=3.10.4",
    "httpx>=0.27.0",
    "fpdf2>=2.7",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
    "google-auth-httplib2>=0.2",
    "pywebpush>=1.14.0",
    "py_vapid>=1.9.0",
    "aiosmtplib>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]
